trying to fix bio alignment

--- a/style.css
+++ b/style.css
@@ -180,6 +180,7 @@ a:hover {
 
 .me {
 	grid-row: 1 / span 1;
+	margin: auto;
 }
 
 .meimg {
